--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.0.12"
+    "@astrojs/react": "^3.0.2",
+    "@fontsource/montserrat": "^5.0.8",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "astro": "^3.0.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swiper": "^10.2.0"
   }
 }
