--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.0.2",
+    "@astrojs/vercel": "^5.0.1",
     "@fontsource/montserrat": "^5.0.8",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
